LibraryController tests